--- a/MakeHumanMhx2Merger/MakeHumanMhx2Merger.csproj
+++ b/MakeHumanMhx2Merger/MakeHumanMhx2Merger.csproj
@@ -32,7 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CSharpJSON">
+    <Reference Include="CSharpJSON, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\CSharpJSON\CSharpJSON\bin\Release\CSharpJSON.dll</HintPath>
     </Reference>
     <Reference Include="System" />
